--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1043,11 +1043,11 @@ a {
     padding: 20px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    transition: 0.15s all ease-in-out;
 }
 
 .category-box:hover{
-    background-color: var(--dark);
+    background-color: var(--beige);
     transform:scale(1.03);
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
 }
