--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -187,7 +187,7 @@ header {
     padding: 0.625rem;
     margin-left: 0.9rem;
     margin-top: 0.9rem;
-    width: 3.75%;
+    width: 4rem;
 }
 
 /* Video ------------------------------------------------------------*/
@@ -1043,7 +1043,7 @@ a {
     padding: 20px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
-    transition: 0.15s all ease-in-out;
+    transition: 0.2s all ease-in-out;
 }
 
 .category-box:hover{
