--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -149,7 +149,7 @@ header {
     position: absolute;
     top: 4rem;
     right: 0;
-    background-color: #C8D9E6;
+    background-color: var(--skyBlue);
     min-width: 16rem;
     box-shadow: 0rem 0.5rem 1rem 0rem rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -166,7 +166,7 @@ header {
 }
 
 .dropdown-content-activity a:hover {
-    background-color: #b9cfe0;
+    background-color: #abc9e1;
 
 }
 
@@ -1047,7 +1047,7 @@ a {
 }
 
 .category-box:hover{
-    background-color: var(--beige);
+    background-color: #abc9e1;
     transform:scale(1.03);
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
 }
