--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1033,8 +1033,8 @@ a {
     flex-wrap: wrap;
     gap: 15px; 
     justify-content: center;
-    padding: 20px;
     margin-top: 30px;
+    margin-bottom: 80px;
 }
 
 .category-box{
@@ -1061,7 +1061,7 @@ a {
 }
 
 .category-box p {
-    font-size: 1em;
+    font-size: 0.9em;
     margin-top: 10px;
     color: var(--teal);
 }
@@ -1074,16 +1074,13 @@ a {
 
 
 
-.main-box{
-    width: 72%;           
-    max-width: 400px;     
-
+.activity-main-box{         
     background-color: var(--skyBlue);
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     padding: 20px;
-    margin: 10px auto;
-
+    margin-top: 20px;
+    margin-bottom: 20px;
     flex: 1 1 calc(25% - 20px); 
 }
 
