making changes root

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,3 +1,21 @@
+
+:root{
+    --yellow: #ffd500;
+    --grey: #3B3941;
+    --dark: #292421;
+
+    --navy: #2F4156;
+    --teal: #567C8D;
+    --skyBlue: #C8D9E6;
+    --beige: #F5EFEB;
+    --white: #edede9;
+
+    --slide1: #63574f;
+    --slide2: #71635b;
+    --slide3: #998980;
+    --slide4: #c6bdb8;
+}
+
 html {
     font-family: sans-serif;
     scroll-behavior: smooth;
@@ -72,7 +90,7 @@ header {
 
 
 #search-button {
-    color: #ffd500;
+    color: var(--yellow);
     width: 3.75rem;
     height: 3.75rem;
     cursor: pointer;
@@ -86,7 +104,7 @@ header {
 /* https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_dropdown_right */
 .dropbtn {
     background-color: #3B3941;
-    color: #ffd500;
+    color: var(--yellow);
     font-size: 2.19rem;
     border: none;
     cursor: pointer;
@@ -105,7 +123,7 @@ header {
     position: absolute;
     top: 4rem;
     right: 0;
-    background-color: #ffd500;
+    background-color: var(--yellow);
     min-width: 16rem;
     box-shadow: 0rem 0.5rem 1rem 0rem rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -126,6 +144,70 @@ header {
 
 }
 
+/* nav bar specifically for activity page */
+
+.dropbtn-activity {
+    background-color: #3B3941;
+    color: #C8D9E6;
+    font-size: 2.19rem;
+    border: none;
+    cursor: pointer;
+    width: 3.75rem;
+    height: 3.75rem;
+    float: right;
+}
+
+.dropdown-activity {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content-activity {
+    display: none;
+    position: absolute;
+    top: 4rem;
+    right: 0;
+    background-color: var(--skyBlue);
+    min-width: 16rem;
+    box-shadow: 0rem 0.5rem 1rem 0rem rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    font-size: larger;
+}
+
+.dropdown-content-activity a {
+    color: black;
+    padding: 1rem 1rem;
+    text-decoration: none;
+    display: block;
+    transition: 0.2s background-color ease;
+    border-top: 0.06rem solid rgb(92, 92, 92);
+}
+
+.dropdown-content-activity a:hover {
+    background-color: #abc9e1;
+
+}
+
+#search-button-activity {
+    color: #b9cfe0;
+    width: 3.75rem;
+    height: 3.75rem;
+    cursor: pointer;
+    border: none;
+    font-size: 1.75rem;
+    padding-top: 1rem;
+}
+
+#header-logo-activity {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 0.625rem;
+    margin-left: 0.9rem;
+    margin-top: 0.9rem;
+    width: 4rem;
+}
+
 /* Video ------------------------------------------------------------*/
 .video-container {
     position: relative;
@@ -137,7 +219,7 @@ header {
     overflow: hidden;
     margin: auto;
     border-radius: 1.875rem;
-    border: 0.19rem solid #ffd500;
+    border: 0.19rem solid var(--yellow);
     box-shadow: 0rem 0.25rem 1.25rem 0rem rgba(0, 0, 0, 0.112);
 }
 
@@ -149,7 +231,7 @@ header {
         /* <----- 16:9 aspect ratio */
         box-shadow: none;
         border-radius: 0;
-        border: 0.19rem solid #ffd500;
+        border: 0.19rem solid var(--yellow);
     }
 
 }
@@ -899,86 +981,7 @@ h1.github {
 
 /* activity page ---------------------------------------------------*/
 
-/* nav bar specifically for activity page */
 
-.dropbtn-activity {
-    background-color: #3B3941;
-    color: #C8D9E6;
-    font-size: 2.19rem;
-    border: none;
-    cursor: pointer;
-    width: 3.75rem;
-    height: 3.75rem;
-    float: right;
-}
-
-.dropdown-activity {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content-activity {
-    display: none;
-    position: absolute;
-    top: 4rem;
-    right: 0;
-    background-color: var(--skyBlue);
-    min-width: 16rem;
-    box-shadow: 0rem 0.5rem 1rem 0rem rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    font-size: larger;
-}
-
-.dropdown-content-activity a {
-    color: black;
-    padding: 1rem 1rem;
-    text-decoration: none;
-    display: block;
-    transition: 0.2s background-color ease;
-    border-top: 0.06rem solid rgb(92, 92, 92);
-}
-
-.dropdown-content-activity a:hover {
-    background-color: #abc9e1;
-
-}
-
-#search-button-activity {
-    color: #b9cfe0;
-    width: 3.75rem;
-    height: 3.75rem;
-    cursor: pointer;
-    border: none;
-    font-size: 1.75rem;
-    padding-top: 1rem;
-}
-
-#header-logo-activity {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 0.625rem;
-    margin-left: 0.9rem;
-    margin-top: 0.9rem;
-    width: 4rem;
-}
-
-
-:root{
-    --navy: #2F4156;
-    --teal: #567C8D;
-    --skyBlue: #C8D9E6;
-    --beige: #F5EFEB;
-    --white: #edede9;
-
-    --dark: #292421;
-    --forest: #424245;
-
-    --slide1: #63574f;
-    --slide2: #71635b;
-    --slide3: #998980;
-    --slide4: #c6bdb8;
-}
 
 #accessibility-background {
     background-image: url("/images/activitybackground.png");
@@ -1019,9 +1022,6 @@ a {
     border-radius: 8px;
 }
 
-#hr-activity{
-    border-color: red;
-}
 
 .container {
     width: 50%; 
