--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -557,7 +557,7 @@ main {
 
 .more-info-tab button {
     cursor: pointer;
-    background-color: #7f7f7f17;
+    background-color: #7f7f7f00;
     border: 0.0625rem;
     border-radius: 0.31rem;
 }
@@ -699,6 +699,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     font-size: 17px;
     border-radius: 3px;
     margin: 1px;
+    background-color: #f3f3f3;
 }
 
 /* Change background color of buttons on hover */
@@ -1000,7 +1001,7 @@ h1.github {
     line-height: 1.5;
 }
 
-a {
+.category-box-container {
     text-decoration: none;
     color: var(--teal);
 }
