--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1021,19 +1021,18 @@ h1.github {
 }
 
 .info-box{
-    background: var(--navy);
-    font-size: 1rem; 
-    color: var(--teal);
+    background: var(--beige);
+    color: var(--navy);
     padding: 15px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
+    font-size: 1.2em; 
+    margin: 0;
 }
 
 
 .container {
-    width: 50%; 
-    max-width: 400px; 
-    min-width: 200px;
+    max-width: 400px;
     margin: 0 auto;
     padding: 1.5vw;
 }
@@ -1053,7 +1052,7 @@ h1.github {
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
 }
 
-.category-box h2 {
+.category-box>h2 {
     font-size: 1.5em;
     margin-bottom: 10px;
     font-weight: bold;
@@ -1061,15 +1060,10 @@ h1.github {
     color: var(--navy);
 }
 
-.category-box p {
+.category-box>p {
     font-size: 0.9em;
     margin-top: 10px;
     color: var(--teal);
-}
-
-.info-box p {
-    font-size: 1em; 
-    margin: 0;
 }
 
 
