--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -977,7 +977,8 @@ h1.github {
 /* activity page ---------------------------------------------------*/
 
 #hr-activity{
-    border-color: var(--skyBlue);
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 #accessibility-background {
@@ -1070,7 +1071,7 @@ h1.github {
 
 
 .activity-main-box{         
-    background-color: var(--skyBlue);
+    background-image: linear-gradient(var(--beige), var(--white));
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     padding: 20px;
