changed img-wawe-test to "width: 100%" to scale with screen size

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -909,7 +909,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 
 /* Accessibility Page > */
 #img-wawe-test {
-    height: 40rem;
+    width: 100%;
 }
 
 /* Github page ---------------------------------------------------------*/
