--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -830,92 +830,71 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 
 }
 
-/* GITHUB PAGE ---------------------------------------------------------*/
+/* github page img --------------------------------*/
 
 .img-container-github {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-}
-
-.img-item {
-    padding:5px;
-    margin: 5px; 
-    flex: 1 1 45%; 
+    padding: 25px;
+    gap: 10px;
+    padding-top: 0px;
 }
 
 .img-item img {
     max-width: 100%;
     height: auto;
     border-radius: 30px;
-    margin: 5px 0;
     border: 3px solid #ffd500;
 }
 
-/* GITHUB TEXT PARAGRAPH-------------------------------------------------*/
+/* github page text section -------------------------------------------------*/
 h1.github {
     margin: 20px;
+    margin-bottom: 1px;
 }
-
-#main-github {
-    display: flex;
-    justify-content: space-between;
-    box-sizing: border-box;
-}
-
-.split-container {
-    justify-content: space-between;
-    gap: 10px;
-    margin: 20px;
-    display: flex;
-}
-
-.split-left,
-.split-right {
-    width: 49%;
-    padding: 5px;
-    box-sizing: border-box;
-    border-radius: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    border: 3px solid #3B3941;
-}
-
-.split-left {
-    background-color: #ffd500;
-}
-
-.split-right {
-    background-color: #ccc;
-}
-
-.content-box {
-    padding: 10px;
-    border-radius: 5px;
-    margin: 5px;
-    min-height: 40%;
-}
-
-.separator.centered {
-    margin: 5px auto;
-    width: 80%;
-    border-top: 2px solid #3B3941;
+h2.github{
     margin-top: 5px;
 }
 
-.content-box h2 {
-    margin: 0;
-}
+
+.split-container {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 15px;
+    padding: 25px;
+  }
+
+  .split-left,
+  .split-right {
+    background-color: #f1f1f1;
+    padding: 20px;
+    border: 3px solid #3B3941;
+    border-radius: 30px;
+  }
+
+  .content-box {
+    margin-bottom: 10px;
+  }
+
+  .content-box h2 {
+    margin-top: 0;
+  }
+
+  .separator.centered {
+    margin: 20px 0;
+  }
 
 @media (max-width: 900px) {
     .split-container {
         display: inline;
+        padding: 2px;
     }
 
     .split-left,
     .split-right {
         width: 100%;
-        padding: 0px;
+        padding: 2px;
     }
 }
+/* end of github page css -------------------------*/
