--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -907,7 +907,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     width: 100%;
 }
 
-/* Github page ---------------------------------------------------------*
+/* Github page ---------------------------------------------------------*/
 
 .img-container-github {
     display: flex;
