--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -40,8 +40,12 @@ body {
     z-index: -1;
 }
 
-hr {
+.separator {
     margin: 4em 0;
+}
+
+hr {
+    margin: 0px;
 }
 
 h1 {
@@ -72,13 +76,10 @@ h2 {
 header {
     background-color: var(--grey);
     box-shadow: 0rem 0.375rem 1rem 0rem rgba(0, 0, 0, 0.2);
+
 }
 
-#activity-header{
-    background-color: var(--slide2);
-}
-
-.header-logo {
+#header-logo {
     position: absolute;
     top: 0;
     left: 0;
@@ -148,8 +149,8 @@ header {
 /* nav bar specifically for activity page */
 
 .dropbtn-activity {
-    background-color: var(--slide2);
-    color: var(--beige);
+    background-color: var(--grey);
+    color: #C8D9E6;
     font-size: 2.19rem;
     border: none;
     cursor: pointer;
@@ -190,7 +191,7 @@ header {
 }
 
 #search-button-activity {
-    color: var(--beige);
+    color: #b9cfe0;
     width: 3.75rem;
     height: 3.75rem;
     cursor: pointer;
@@ -258,6 +259,14 @@ nav {
     min-height: 5.625rem;
 }
 
+/* muligens endre størrelse på nav på mobile */
+/* muligens endre størrelse på nav på mobile */
+/* muligens endre størrelse på nav på mobile */
+/* muligens endre størrelse på nav på mobile */
+/* muligens endre størrelse på nav på mobile */
+/* muligens endre størrelse på nav på mobile */
+/* muligens endre størrelse på nav på mobile */
+
 .nav-links {
     list-style: none;
     display: flex;
@@ -307,6 +316,23 @@ main {
     }
 }
 
+#main-content>h2 {
+    font-weight: 100;
+}
+
+#course-key-points {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    padding: 0% 0%;
+}
+
+@media (max-width: 566px) {
+    #course-key-points {
+        justify-content: center;
+    }
+}
+
 .detail-box {
     width: 13rem;
     margin: 0.6%;
@@ -318,28 +344,6 @@ main {
 .main-content {
     margin-left: 10%;
     margin-right: 10%;
-}
-
-#main-content>h2 {
-    font-weight: 100;
-}
-
-#course-key-points {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: left;
-    padding: 0% 0%;
-    margin: 4rem 0;
-}
-
-@media (max-width: 566px) {
-    #course-key-points {
-        justify-content: center;
-    }
-}
-
-#hr-title-separator{
-    margin-top: 0;
 }
 
 #course-info {
@@ -408,6 +412,7 @@ main {
     display: flex;
     flex-direction: row;
     background-color: var(--yellow);
+    /* border-radius: 15px; */
 }
 
 #text {
@@ -554,7 +559,7 @@ main {
     border-radius: 0.31rem;
 }
 
-#more-info {
+.more-info {
     overflow: hidden;
     padding: 3rem 0em;
     background: #7f7f7f17;
@@ -587,7 +592,7 @@ footer #icon {
     font-size: 3rem;
 }
 
-#mediabox {
+.mediabox {
     overflow: hidden;
     padding: 3rem 0em;
     border-top: 1.25rem solid rgba(255, 255, 255, 0.08);
@@ -595,8 +600,13 @@ footer #icon {
     background: var(--grey);
 }
 
+.mediabox p {
+    letter-spacing: 0.06rem;
+    font-size: 0.9rem;
+    color: rgba(255, 255, 255, 0.6);
+}
 
-#mediabox a {
+.mediabox a {
     text-decoration: none;
     color: rgba(255, 255, 255, 0.8);
 }
@@ -664,7 +674,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #7f7f7f17;
-    margin: 4rem auto 0;
+    margin: auto;
     max-width: 59em;
 }
 
@@ -897,9 +907,10 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 
 
 }
+
 /* Accessibility Page > */
-.img-accessibility{
-    width: 100%;
+#img-wawe-test {
+    height: 40rem;
 }
 
 /* Github page ---------------------------------------------------------*/
@@ -908,68 +919,72 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 25px;
-    gap: 10px;
-    padding-top: 0px;
 }
+
+.img-item {
+    padding: 5px;
+    margin: 5px;
+    flex: 1 1 45%;
+}
+
 .img-item img {
     max-width: 100%;
     height: auto;
     border-radius: 30px;
-   border: 3px solid var(--yellow);
+    margin: 5px 0;
+    border: 3px solid var(--yellow);
 }
 
-/* github page text section -------------------------------------------------*/
+/* GITHUB TEXT PARAGRAPH-------------------------------------------------*/
 h1.github {
     margin: 20px;
-    margin-bottom: 1px;
 }
-h2.github{
-    margin-top: 5px;
+
+#main-github {
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
 }
 
 .split-container {
-    display: grid;
-    grid-template-columns: auto auto;
-    gap: 15px;
-    padding: 25px;
-  }
-
-  .split-left,
-  .split-right {
-    background-color: var(--white);
-    padding: 20px;
-    border: 3px solid var(--grey);
-    border-radius: 30px;
-  }
-
-  .content-box {
-    margin-bottom: 10px;
-  }
-
-  .content-box h2 {
-    margin-top: 0;
-  }
-
-  .separator.centered {
-    margin: 20px 0;
-  }
-
-@media (max-width: 900px) {
-    .split-container {
-        display: inline;
-        padding: 2px;
-  }
-  
-    .split-left,
-    .split-right {
-        width: 100%;
-        padding: 2px;
-    }
+    justify-content: space-between;
+    gap: 10px;
+    margin: 20px;
+    display: flex;
 }
-/* end of git page -------------------------------------------------*/
+
+.split-left,
+.split-right {
+    width: 49%;
+    padding: 5px;
+    box-sizing: border-box;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 3px solid var(--grey);
+}
+
+.split-left {
+    background-color: var(--yellow);
+}
+
+.split-right {
+    background-color: #ccc;
+}
+
+#main-github {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
 
 /* activity page ---------------------------------------------------*/
+
+#hr-activity {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
 
 #activity-background {
     background-image: url("/images/activitybackground.png");
@@ -1011,13 +1026,21 @@ h2.github{
     text-align: center;
 }
 
+.info-box {
+    background: var(--beige);
+    color: var(--navy);
+    padding: 15px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    font-size: 1.2em;
+    margin: 0;
+}
+
 @media(max-width:400px) {
     .container {
         max-width: 100%;
     }
 }
-
-
 
 .category-box-container {
     display: flex;
@@ -1098,9 +1121,8 @@ h2.github{
     flex: 1 1 calc(33.33% - 10px);
     /* Tredje dels bredde med mellomrom */
     max-width: calc(33.33% - 10px);
-    transition: 0.4s ease;
+    transition: transform 0.4s ease;
     /* Smooth transition */
-    filter: grayscale(100%);
 }
 
 .small-img-box img {
@@ -1108,35 +1130,17 @@ h2.github{
     height: auto;
     display: block;
     border-radius: 8px;
-    transition: all 0.4s ease;
 }
 
-.small-img-box:hover img{
-    filter: brightness(0.5);
+.big-img-container {
+    display: flex;
+    justify-content: center;
+
 }
 
-.small-img-box .hover-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 2rem;
-    color: transparent;
-    font-weight: bold;
-    transition: all 0.4s ease;
-    z-index: 2;
-    text-shadow: none;
-}
-
-.small-img-box:hover .hover-text {
-    pointer-events: none; /* Prevent the text from interfering with the link */
-    color: var(--beige); /* Use your CSS variable or replace with a color */
-    mix-blend-mode: screen;
-}
-
-.hover-text{
-    width: 100%;
-    text-align: center;
+.big-img-box {
+    max-width: 280px;
+    margin: 5px;
 }
 
 /* Media query for mellomstore skjermer (for eksempel nettbrett) */
@@ -1145,10 +1149,8 @@ h2.github{
         flex: 1 1 calc(50% - 10px);
         max-width: calc(50% - 10px);
     }
-    .category-box-container{
-        flex-direction: column;
-    }
 }
+
 /* Media query for små skjermer (mobil) */
 @media (max-width: 480px) {
     .small-img-box {
@@ -1162,9 +1164,8 @@ h2.github{
 .small-img-box:hover {
     background-color: var(--beige);
     border-radius: 10px;
-    scale: 1.02;
+    transform: scale(1.06);
     box-shadow: 0px 0px 10px 4px var(--shadow2);
-    filter: grayscale(0%);
 }
 
 /*kode hentet fra w3school, vise kilde?*/
