tidy up git page

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -913,15 +913,18 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 25px;
     gap: 10px;
+    padding: 25px;
     padding-top: 0px;
+    overflow-x: hidden;
+    box-sizing: border-box;
 }
 .img-item img {
     max-width: 100%;
     height: auto;
     border-radius: 30px;
-   border: 3px solid var(--yellow);
+    border: 3px solid var(--yellow);
+    box-sizing: border-box;
 }
 
 /* github page text section -------------------------------------------------*/
@@ -938,18 +941,19 @@ h2.github{
     grid-template-columns: auto auto;
     gap: 15px;
     padding: 25px;
+    box-sizing: border-box;
   }
 
   .split-left,
   .split-right {
-    background-color: var(--white);
-    padding: 20px;
+    padding: 25px;
     border: 3px solid var(--grey);
-    border-radius: 30px;
+    border-radius: 25px;
+    box-sizing: border-box;
   }
 
   .content-box {
-    margin-bottom: 10px;
+    margin-bottom: 1px;
   }
 
   .content-box h2 {
@@ -962,8 +966,10 @@ h2.github{
 
 @media (max-width: 900px) {
     .split-container {
-        display: inline;
+        grid-template-columns: 1fr;
         padding: 2px;
+        margin-left: 5%;
+        margin-right: 5%;
   }
   
     .split-left,
@@ -971,8 +977,20 @@ h2.github{
         width: 100%;
         padding: 2px;
     }
+    
+    .img-container-github {
+        padding: 2px;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    .content-box {
+        margin: 5%;
 }
-/* end of git page -------------------------------------------------*/
+.separator.centered {
+    margin: 2% 5%;
+  }
+}
 
 /* activity page ---------------------------------------------------*/
 
