--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -214,7 +214,7 @@ header {
     padding-top: 1rem;
 }
 
-#header-logo-activity {
+.header-logo-activity {
     position: absolute;
     top: 0;
     left: 0;
@@ -360,7 +360,7 @@ main {
     margin-right: 10%;
 }
 
-#hr-title-separator{
+#hr-title-separator {
     margin-top: -1rem;
     margin-bottom: 2rem;
 }
@@ -967,6 +967,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     overflow-x: hidden;
     box-sizing: border-box;
 }
+
 .img-item img {
     max-width: 100%;
     height: auto;
@@ -983,19 +984,19 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     gap: 0.9375rem;
     padding: 1.5625rem;
     box-sizing: border-box;
-  }
+}
 
-  .split-left,
-  .split-right {
+.split-left,
+.split-right {
     padding: 1.5rem;
     border: 0.1875rem solid var(--grey);
     border-radius: 1.5625rem;
     box-sizing: border-box;
-  }
+}
 
-  .separator.centered {
+.separator.centered {
     margin: 1.25rem 0;
-  }
+}
 
 @media (max-width: 900px) {
     .split-container {
@@ -1003,14 +1004,14 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
         padding: 0.125rem;
         margin-left: 5%;
         margin-right: 5%;
-  }
-  
+    }
+
     .split-left,
     .split-right {
         width: 100%;
         padding: 0.125rem;
     }
-    
+
     .img-container-github {
         padding: 0.125rem;
         margin-left: 5%;
@@ -1019,13 +1020,14 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 
     .content-box {
         margin: 5%;
-}
-.separator.centered {
-    margin: 2% 5%;
-  }
+    }
+
+    .separator.centered {
+        margin: 2% 5%;
+    }
 }
 
-/* activity page ---------------------------------------------------*/
+/* activity page ----------------------------------------------------------*/
 #activity-background {
     background-image: url("/images/activitybackground.png");
     background-position: center;
@@ -1049,8 +1051,8 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
     flex-wrap: wrap;
     gap: 15px;
     justify-content: center;
-    margin-top: 30px;
-    margin-bottom: 80px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .category-box-container>a {
@@ -1283,4 +1285,12 @@ ul.media-activity li a {
     height: 60px;
     line-height: 60px;
     text-align: center;
+}
+
+.more-info-links-activity {
+    display: block;
+    text-decoration: underline;
+    text-decoration-color: var(--slide2);
+    color: var(--navy);
+    text-decoration-thickness: 2px;
 }
