fixed an oopsie

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -223,7 +223,7 @@ header {
     padding-top: 1rem;
 }
 
-.header-logo-activity {
+#header-logo-activity {
     position: absolute;
     top: 0;
     left: 0;
