--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -88,8 +88,8 @@ h2 {
 /* header ------------------------------------- */
 header {
     background-color: var(--grey);
-    box-shadow: 0rem 0.375rem 1rem 0rem rgba(0, 0, 0, 0.2);
-
+    /* box-shadow to add slight depth to the navbar */
+    box-shadow: 0rem 0.37rem 1rem 0rem rgba(0, 0, 0, 0.2);
 }
 
 .header-logo {
@@ -348,6 +348,10 @@ main {
     flex-wrap: wrap;
     justify-content: left;
     padding: 0% 0%;
+}
+
+#course-summary{
+    padding: 2rem 0 2rem 0;
 }
 
 @media (max-width: 566px) {
